fix overlapping flyouts

--- a/themes/default/css/base.css
+++ b/themes/default/css/base.css
@@ -143,7 +143,7 @@ h5 {
 #navWrapper {
 	position: absolute;
 	float: right;
-	right: 20px;
+	left: 50%;
 }
 #logo {
     background-repeat: no-repeat;
@@ -758,7 +758,7 @@ ul.sf-menu li li.sfHover li ul {
 }
 ul.sf-menu li li li:hover ul,
 ul.sf-menu li li li.sfHover ul {
-    left:			12em; /* match ul width */
+    left:			14em; /* match ul width */
     top:			0;
 }
 
